   that doesn't synchronize on the file handle. This can be useful to 
   avoid the performance problems of SimpleFSDirectory and NIOFSDirectory.
   (Robert Muir, Simon Willnauer, Uwe Schindler, Michael McCandless)

 * LUCENE-2842: Add analyzer for Galician. Also adds the RSLP (Orengo) stemmer
   for Portuguese.  (Robert Muir)

Build

 * LUCENE-2124: Moved the JDK-based collation support from contrib/collation 
   into core, and moved the ICU-based collation support into contrib/icu.  
   (Steven Rowe, Robert Muir)

 * LUCENE-2323: Moved contrib/regex into contrib/queries. Moved the
   queryparsers under contrib/misc and contrib/surround into contrib/queryparser. 
   Moved contrib/fast-vector-highlighter into contrib/highlighter. 
   Moved ChainedFilter from contrib/misc to contrib/queries. contrib/spatial now
   depends on contrib/queries instead of contrib/misc.  (Robert Muir)
   
 * LUCENE-2333: Fix failures during contrib builds, when classes in
   core were changed without ant clean. This fix also optimizes the
   dependency management between contribs by a new ANT macro.
   (Uwe Schindler, Shai Erera)

 * LUCENE-2797: Upgrade contrib/icu's ICU jar file to ICU 4.6  
   (Robert Muir)

 * LUCENE-2833: Upgrade contrib/ant's jtidy jar file to r938 (Robert Muir)

 * LUCENE-2413: Moved the demo out of lucene core and into contrib/demo.
   (Robert Muir)

Optimizations

 * LUCENE-2157: DelimitedPayloadTokenFilter no longer copies the buffer
   over itsself. Instead it sets only the length. This patch also optimizes
   the logic of the filter and uses NIO for IdentityEncoder. (Uwe Schindler)
 
 * LUCENE-2084: Change IndexableBinaryStringTools to work on byte[] and char[]
   directly, instead of Byte/CharBuffers, and modify ICUCollationKeyFilter to
   take advantage of this for faster performance.
   (Steven Rowe, Uwe Schindler, Robert Muir)

 * LUCENE-2194, LUCENE-2201, LUCENE-2288: Snowball stemmers in contrib/analyzers